completado html y css

--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -15,87 +15,192 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-</head>
+    </head>
 
-<body>
+    <body>
 
-    <body class="Montserrat">
-        <div class="Newsletter-services">
-            <p> Sumate al Newsletter y Obtené una <strong>Asesoría 100% Gratuita</strong>
-            </p>
-        </div>
-        <header class="header-services">
-            <div>
-                <div class="container">
-                    <div class="logo-services">
-                        <img src="../imgs/amerellus-logo.png" alt="amarellus seo lab" width="150px">
+        <body class="Montserrat">
+            <div class="Newsletter-services">
+                <p> Sumate al Newsletter y Obtené una <strong>Asesoría 100% Gratuita</strong>
+                </p>
+            </div>
+            <header class="header-services">
+                <div>
+                    <div class="container">
+                        <div class="logo-services">
+                            <img src="../imgs/amerellus-logo.png" alt="amarellus seo lab" width="150px">
+                        </div>
+                        <nav class="nav-services">
+                            <ul>
+                                <li><a href="../index.html">Home</a></li>
+                                <li><a href="servicios.html">Servicios</a></li>
+                                <li><a href="nosotros.html">Nosotros</a></li>
+                                <li><a href="blog.html">Blog</a></li>
+                                <li><a href="contacto.html">Contacto</a></li>
+                            </ul>
+                        </nav>
                     </div>
-                    <nav class="nav-services">
+                    <header class="header">
+                        <div class="header-top">
+                            <h1>Respiramos SEO</h1>
+                        </div>
+                        <div class="header-content">
+                            <div class="header-item">
+                                <img src="../imgs/rendimiento.png" alt="rendimieinto" class="header-icon">
+                                <h2>Nos Enfocamos en Datos</h2>
+                            </div>
+                            <div class="header-item">
+                                <img src="../imgs/conversion.png" alt="Icono Resultados" class="header-icon">
+                                <h2>Buscamos Resultados</h2>
+                            </div>
+                        </div>
+                        <div class="wrapper">
+                            <a href="https://wa.link/hktj46" class="contact-button" target="_blank">Reserva tu Consulta
+                                Gratuita</a>
+                        </div>
+                        <section class="nosotros">
+                            <div>
+                                <h2>SOMOS UN EQUIPO MULTIDISCIPLINARIO</h2>
+                            </div>
+                            <img src="../imgs/equipo.jpg" alt="">
+                        </section>
+                    </header>
+
+                    <!--Section team-->
+                    <section class="team-section">
+                        <h2>100% Apasionados por el SEO</h2>
+                        <p>En Amarellus SEO LAB, somos un equipo 100% apasionado por el SEO, ¡y eso se nota! Nos encanta
+                            explorar las últimas tendencias y crear estrategias innovadoras que hagan brillar a nuestros
+                            clientes en el mundo digital. ¡Con nosotros, tu éxito es nuestra misión!</p>
+                        <hr class="custom-separator">
+                        <div class="team-container">
+                            <div class="team-member">
+                                <img src="../imgs/equipo/Imagen de WhatsApp 2024-04-19 a las 11.19.42_73417252.jpg"
+                                    alt="Miembro 1" class="member-image">
+                                <h3>Adri Montañez</h3>
+                                <p>CEO</p>
+                            </div>
+                            <div class="team-member">
+                                <img src="../imgs/equipo/team 8.jpg" alt="Miembro 2" class="member-image">
+                                <h3>Javier Gonzalez</h3>
+                                <p>Executive VP</p>
+                            </div>
+                            <div class="team-member">
+                                <img src="../imgs/equipo/team 3.jpeg" alt="Miembro 3" class="member-image">
+                                <h3>Lucía Menendez</h3>
+                                <p>CMO</p>
+                            </div>
+                            <div class="team-member">
+                                <img src="../imgs/equipo/team 9.jpeg" alt="Miembro 4" class="member-image">
+                                <h3>Ezequiel Pavic</h3>
+                                <p>Gerente de Proyectos</p>
+                            </div>
+                            <div class="team-member">
+                                <img src="../imgs/equipo/team 2.jpeg" alt="Miembro 5" class="member-image">
+                                <h3>Andrés Barboza</h3>
+                                <p>Head of SEO</p>
+                            </div>
+                            <div class="team-member">
+                                <img src="../imgs/equipo/team 4.jpeg" alt="Miembro 6" class="member-image">
+                                <h3>Esteban Shortt</h3>
+                                <p>ADS Manager</p>
+                            </div>
+                            <div class="team-member">
+                                <img src="../imgs/equipo/team 5.jpeg" alt="Miembro 7" class="member-image">
+                                <h3>Vanessa Rodriguez</h3>
+                                <p>Directora Creativa</p>
+                            </div>
+                            <div class="team-member">
+                                <img src="../imgs/equipo/team 11.jpg" alt="Miembro 8" class="member-image">
+                                <h3>Sebas Gonzalez</h3>
+                                <p>SEO Specialist</p>
+                            </div>
+                            <div class="team-member">
+                                <img src="../imgs/equipo/team 6.jpg" alt="Miembro 9" class="member-image">
+                                <h3>Karina Sanchez</h3>
+                                <p>SEO Specialist</p>
+                            </div>
+                            <div class="team-member">
+                                <img src="../imgs/equipo/team 7.jpg" alt="Miembro 10" class="member-image">
+                                <h3>Carlos Mendoza</h3>
+                                <p>Full Stack Developer</p>
+                            </div>
+                        </div>
+                    </section>
+                    <hr class="custom-separator">
+                    <section class="reason-why">
+                        <h2>El Éxito lo Construimos Nosotros</h2>
+                        <p>En Amarellus SEO LAB, creemos que el éxito no es un destino, sino un viaje colaborativo.
+                            Trabajamos mano a mano contigo para comprender tus objetivos y diseñar estrategias
+                            personalizadas que se alineen con tu visión. Juntos, construimos una base sólida para tu
+                            crecimiento digital.</p>
+                        <p>Nuestra pasión por el SEO se traduce en resultados tangibles. Nos mantenemos al tanto de las
+                            últimas tendencias y algoritmos para asegurarnos de que tu sitio web no solo cumpla, sino
+                            que supere las expectativas del mercado. Con cada ajuste y optimización, acercamos tu
+                            negocio a nuevas alturas.</p>
+                        <p>Tu éxito es nuestro mayor logro. En Amarellus SEO LAB, cada proyecto es una oportunidad para
+                            demostrar nuestro compromiso y dedicación. Con nosotros, no solo obtienes un servicio;
+                            obtienes un socio que celebra tus triunfos como si fueran propios. ¡Construyamos el éxito
+                            juntos!</p>
+                        <div class="banner">
+                            <img src="../imgs/calendario.png" alt=" calendario">
+                            <h2>Conversa con uno de nuestros Expertos</h2>
+                            <p>Queremos conocer tus objetivos y enfocarnos en ayudarte.</p>
+                            <a href="ruta_a_la_videollamada" class="btn-agendar">Agendar videollamada</a>
+                        </div>
+                    </section>
+                    <!--Section 5-->
+
+                    <main>
+                        <section class="contenedor-forms">
+
+                            <body>
+                                <div class="h2">
+                                    <h2>HOLA ¡HABLEMOS!</h2>
+                                </div>
+                                <div class="form-register">
+                                    <input class="controls" type="text" name="nombres" id="nombres"
+                                        placeholder="Ingresa tu Nombre">
+                                    <input class="controls" type="text" name="telefono" id="telefonos"
+                                        placeholder="Ingresa tu Telefono">
+                                    <input class="controls" type="email" name="email" id="email"
+                                        placeholder="Ingresa tu Email">
+                                    <input class="controls" type="text" name="mensaje" id="mensaje"
+                                        placeholder="Ingresa tu Mensaje">
+                                    <input class="controls" type="submit" value="Enviar">
+                        </section>
+                </div>
+        </body>
+        </main>
+
+
+        </header>
+        <div class="footer">
+            <footer>
+                <div class="footer-content">
+                    <img src="../imgs/amarellus white.png" alt="logo seo lab" width="100px">
+                    <p>© Designed by Amarellus SEO Lab. All Rights Reserved.</p>
+                    <p><a href="/terms-of-service">Terms of Service</a> | <a href="/privacy-policy">Privacy Policy</a>
+                    </p>
+                    <div class="social-media">
+                        <a href="https://facebook.com" target="_blank">Facebook</a>
+                        <a href="https://twitter.com" target="_blank">Twitter</a>
+                        <a href="https://instagram.com" target="_blank">Instagram</a>
+                        <a href="https://linkedin.com" target="_blank">LinkedIn</a>
+                    </div>
+                    <nav class="footer-menu">
                         <ul>
-                            <li><a href="../index.html">Home</a></li>
-                            <li><a href="servicios.html">Servicios</a></li>
-                            <li><a href="nosotros.html">Nosotros</a></li>
-                            <li><a href="blog.html">Blog</a></li>
-                            <li><a href="contacto.html">Contacto</a></li>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="html/servicios.html">Servicios</a></li>
+                            <li><a href="html/nosotros.html">Nosotros</a></li>
+                            <li><a href="html/blog.html">Blog</a></li>
+                            <li><a href="html/contacto.html">Contacto</a></li>
                         </ul>
                     </nav>
                 </div>
-        </header>
-            <section>
-                <h1>Respiramos SEO</h1>
-            </section>
-        </main>
-
-    <!--Section 5-->
-
-    <main>
-        <section class="contenedor-forms">
-
-            <body>
-                <div class="h2">
-                    <h2>HOLA ¡HABLEMOS!</h2>
-                </div>
-                <div class="form-register">
-                    <input class="controls" type="text" name="nombres" id="nombres"
-                        placeholder="Ingresa tu Nombre">
-                    <input class="controls" type="text" name="telefono" id="telefonos"
-                        placeholder="Ingresa tu Telefono">
-                    <input class="controls" type="email" name="email" id="email" placeholder="Ingresa tu Email">
-                    <input class="controls" type="text" name="mensaje" id="mensaje"
-                        placeholder="Ingresa tu Mensaje">
-                    <input class="controls" type="submit" value="Enviar">
-        </section>
+            </footer>
         </div>
-</body>
-</main>
 
-
-</header>
-<div class="footer">
-<footer>
-<div class="footer-content">
-    <img src="../imgs/amarellus white.png" alt="logo seo lab" width="100px">
-    <p>© Designed by Amarellus SEO Lab. All Rights Reserved.</p>
-    <p><a href="/terms-of-service">Terms of Service</a> | <a href="/privacy-policy">Privacy Policy</a></p>
-    <div class="social-media">
-        <a href="https://facebook.com" target="_blank">Facebook</a>
-        <a href="https://twitter.com" target="_blank">Twitter</a>
-        <a href="https://instagram.com" target="_blank">Instagram</a>
-        <a href="https://linkedin.com" target="_blank">LinkedIn</a>
-    </div>
-    <nav class="footer-menu">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="html/servicios.html">Servicios</a></li>
-            <li><a href="html/nosotros.html">Nosotros</a></li>
-            <li><a href="html/blog.html">Blog</a></li>
-            <li><a href="html/contacto.html">Contacto</a></li>
-        </ul>
-    </nav>
-</div>
-</footer>
-</div>
-
-</body>
+    </body>
 
 </html>
