--- a/html/blog.html
+++ b/html/blog.html
@@ -14,60 +14,118 @@
         rel="stylesheet">
 </head>
 
-<body>
+</head>
+<body class="Montserrat">
 
-    <body class="Montserrat">
-        <div class="Newsletter-services">
-            <p> Sumate al Newsletter y Obtené una <strong>Asesoría 100% Gratuita</strong>
-            </p>
+    <div class="Newsletter-services">
+        <p>Sumate al Newsletter y Obtené una <strong>Asesoría 100% Gratuita</strong></p>
+    </div>
+
+    <header class="header-services">
+        <div class="container">
+            <div class="logo-services">
+                <img src="../imgs/amerellus-logo.png" alt="amarellus seo lab" width="150px">
+            </div>
+            <div class="hamburger" id="hamburger">
+                <img src="../imgs/hamburguesa.png" alt="menu hamburguesa">
+            </div>
+            <nav class="nav">
+                <button class="cerrar">Cerrar</button>
+            <nav class="nav-services">
+                <ul>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="servicios.html">Servicios</a></li>
+                    <li><a href="nosotros.html">Nosotros</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
         </div>
-        <header class="header-services">
-            <div>
-                <div class="container">
-                    <div class="logo-services">
-                        <img src="../imgs/amerellus-logo.png" alt="amarellus seo lab" width="150px">
-                    </div>
-                    <nav class="nav-services">
-                        <ul>
-                            <li><a href="../index.html">Home</a></li>
-                            <li><a href="servicios.html">Servicios</a></li>
-                            <li><a href="nosotros.html">Nosotros</a></li>
-                            <li><a href="blog.html">Blog</a></li>
-                            <li><a href="contacto.html">Contacto</a></li>
-                        </ul>
-                    </nav>
-                </div>
-        </header>
+    </header>
 
-<body>
     <main>
-        <section>
-            <h1>Nuestro Blog</h1>
+        <section class="blog">
+            <div class="video-background">
+                <video autoplay muted loop>
+                    <source src="/Videos/19498-302627994_small.mp4" type="video/mp4">
+                </video>
+            </div>
+            <div class="contenido">
+                <div class="overlay"></div>
+                <h1>Nuestro Blog</h1>
+            </div>
         </section>
-    </main>
 
+        <!-- Sección de menú de categorías -->
+        <section class="categorias">
+            <h2>Categorías</h2>
+            <ul class="menu-categorias">
+                <li><a href="#">SEO</a></li>
+                <li><a href="#">Marketing Digital</a></li>
+                <li><a href="#">Contenido</a></li>
+                <li><a href="#">Redes Sociales</a></li>
+                <li><a href="#">Analítica Web</a></li>
+            </ul>
+        </section>
+
+        <!-- Sección de artículos -->
+<section class="articulos">
+    <h2>Artículos Recientes</h2>
+    <div class="grid-articulos">
+        <div class="articulo">
+            <img src="../imgs/campaign-creators-gMsnXqILjp4-unsplash.jpg" alt="Artículo 1">
+            <h3>Título del Artículo 1</h3>
+            <p>Breve introducción sobre el contenido del artículo 1. Este artículo cubre...</p>
+        </div>
+        <div class="articulo">
+            <img src="../imgs/campaign-creators-pypeCEaJeZY-unsplash.jpg" alt="Artículo 2">
+            <h3>Título del Artículo 2</h3>
+            <p>Breve introducción sobre el contenido del artículo 2. Este artículo cubre...</p>
+        </div>
+        <div class="articulo">
+            <img src="../imgs/como realizar SEO.webp" alt="Artículo 3">
+            <h3>Título del Artículo 3</h3>
+            <p>Breve introducción sobre el contenido del artículo 3. Este artículo cubre...</p>
+        </div>
+        <div class="articulo">
+            <img src="../imgs/photo-1548345680-f5475ea5df84.avif" alt="Artículo 4">
+            <h3>Título del Artículo 4</h3>
+            <p>Breve introducción sobre el contenido del artículo 4. Este artículo cubre...</p>
+        </div>
+        <div class="articulo">
+            <img src="../imgs/igor-miske-Px3iBXV-4TU-unsplash.jpg" alt="Artículo 5">
+            <h3>Título del Artículo 5</h3>
+            <p>Breve introducción sobre el contenido del artículo 5. Este artículo cubre...</p>
+        </div>
+        <div class="articulo">
+            <img src="../imgs/seo services-min.jpg" alt="Artículo 6">
+            <h3>Título del Artículo 6</h3>
+            <p>Breve introducción sobre el contenido del artículo 6. Este artículo cubre...</p>
+        </div>
+        <div class="articulo">
+            <img src="../imgs/seo-galaxy-zZ7J5qri6qY-unsplash.jpg" alt="Artículo 7">
+            <h3>Título del Artículo 7</h3>
+            <p>Breve introducción sobre el contenido del artículo 7. Este artículo cubre...</p>
+        </div>
+        <div class="articulo">
+            <img src="../imgs/seo tecnico.webp" alt="Artículo 8">
+            <h3>Título del Artículo 8</h3>
+            <p>Breve introducción sobre el contenido del artículo 8. Este artículo cubre...</p>
+        </div>
+        <div class="articulo">
+            <img src="../imgs/seo content.webp" alt="Artículo 9">
+            <h3>Título del Artículo 9</h3>
+            <p>Breve introducción sobre el contenido del artículo 9. Este artículo cubre...</p>
+        </div>
+    </div>
+    <div class="banner">
+        <img src="../imgs/calendario.png" alt=" calendario">
+        <h2>Conversa con uno de nuestros Expertos</h2>
+        <p>Queremos conocer tus objetivos y enfocarnos en ayudarte.</p>
+        <a href="https://wa.link/hktj46" class="btn-agendar">Agendar videollamada</a>
+    </div>
+</section>
     <!--Section 5-->
-
-    <main>
-        <section class="contenedor-forms">
-
-            <body>
-                <div class="h2">
-                    <h2>HOLA ¡HABLEMOS!</h2>
-                </div>
-                <div class="form-register">
-                    <input class="controls" type="text" name="nombres" id="nombres"
-                        placeholder="Ingresa tu Nombre">
-                    <input class="controls" type="text" name="telefono" id="telefonos"
-                        placeholder="Ingresa tu Telefono">
-                    <input class="controls" type="email" name="email" id="email" placeholder="Ingresa tu Email">
-                    <input class="controls" type="text" name="mensaje" id="mensaje"
-                        placeholder="Ingresa tu Mensaje">
-                    <input class="controls" type="submit" value="Enviar">
-        </section>
-        </div>
-</body>
-</main>
 
 
 </header>
@@ -85,11 +143,11 @@
     </div>
     <nav class="footer-menu">
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="html/servicios.html">Servicios</a></li>
-            <li><a href="html/nosotros.html">Nosotros</a></li>
-            <li><a href="html/blog.html">Blog</a></li>
-            <li><a href="html/contacto.html">Contacto</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="servicios.html">Servicios</a></li>
+            <li><a href="nosotros.html">Nosotros</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
         </ul>
     </nav>
 </div>
