--- a/index.html
+++ b/index.html
@@ -25,14 +25,18 @@
         <p> Sumate al Newsletter y Obtené una <strong>Asesoría 100% Gratuita</strong>
         </p>
     </div>
-
+</head>
     <header class="header">
         <div class="container">
             <div class="logo">
-                <img src="../imgs/amerellus-logo.png" alt="amarellus seo lab" width="150px">
+                <img src="../imgs/amerellus-logo.png" alt="Amarellus SEO LAB" width="150px">
+            </div>
+            <div class="hamburger" id="hamburger">
+                <img src="imgs/hamburguesa.png" alt="menu hamburguesa">
             </div>
             <nav class="nav">
-                <ul>
+                <button class="cerrar">Cerrar</button>
+                <ul id="nav-links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="html/servicios.html">Servicios</a></li>
                     <li><a href="html/nosotros.html">Nosotros</a></li>
@@ -52,7 +56,6 @@
             </div>
         </section>
     </main>
-    </header>
 
     <!--Section-->
     <main>
