cambios de estilo y ajustes html

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         paso del
                         camino.</p>
                     <div class="wrapper">
-                        <a href="servicios.html" class="services-button" target="_blank">Conoce Más</a>
+                        <a href="html/servicios.html" class="services-button" target="_blank">Conoce Más</a>
                     </div>
                     
                 </div>
