--- a/html/contacto.html
+++ b/html/contacto.html
@@ -81,7 +81,7 @@
                 <img src="../imgs/calendario.png" alt=" calendario">
                 <h2>Conversa con uno de nuestros Expertos</h2>
                 <p>Queremos conocer tus objetivos y enfocarnos en ayudarte.</p>
-                <a href="ruta_a_la_videollamada" class="btn-agendar">Agendar videollamada</a>
+                <a href="https://wa.link/hktj46" class="btn-agendar">Agendar videollamada</a>
             </div>
 </body>
 </main>
@@ -100,11 +100,11 @@
         </div>
         <nav class="footer-menu">
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="html/servicios.html">Servicios</a></li>
-                <li><a href="html/nosotros.html">Nosotros</a></li>
-                <li><a href="html/blog.html">Blog</a></li>
-                <li><a href="html/contacto.html">Contacto</a></li>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="servicios.html">Servicios</a></li>
+                <li><a href="nosotros.html">Nosotros</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
                 <p>© Designed by Amarellus SEO Lab. All Rights Reserved.</p>
                 <p><a href="/terms-of-service">Terms of Service</a> | <a href="/privacy-policy">Privacy Policy</a></p>
             </ul>
