--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -146,7 +146,7 @@
                             <img src="../imgs/calendario.png" alt=" calendario">
                             <h2>Conversa con uno de nuestros Expertos</h2>
                             <p>Queremos conocer tus objetivos y enfocarnos en ayudarte.</p>
-                            <a href="ruta_a_la_videollamada" class="btn-agendar">Agendar videollamada</a>
+                            <a href="https://wa.link/hktj46" class="btn-agendar">Agendar videollamada</a>
                         </div>
                     </section>
                     <!--Section 5-->
@@ -190,11 +190,11 @@
                     </div>
                     <nav class="footer-menu">
                         <ul>
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="html/servicios.html">Servicios</a></li>
-                            <li><a href="html/nosotros.html">Nosotros</a></li>
-                            <li><a href="html/blog.html">Blog</a></li>
-                            <li><a href="html/contacto.html">Contacto</a></li>
+                            <li><a href="../index.html">Home</a></li>
+                            <li><a href="servicios.html">Servicios</a></li>
+                            <li><a href="nosotros.html">Nosotros</a></li>
+                            <li><a href="blog.html">Blog</a></li>
+                            <li><a href="contacto.html">Contacto</a></li>
                         </ul>
                     </nav>
                 </div>
