--- a/html/servicios.html
+++ b/html/servicios.html
@@ -106,7 +106,7 @@
             <!--section cta-->
             <section class="cta-section">
                 <h2>Mejora tu Posicionamiento Web</h2>
-                <div><a href="#" class="cta-button">¡Hablemos!</a></div>
+                <div><a href="https://wa.link/hktj46" class="cta-button">¡Hablemos!</a></div>
                 <div class="grid-container">
                     <div class="grid-item">
                         <img src="../imgs/rendimiento.png" alt="rendimiento" class="service-image">
@@ -256,11 +256,11 @@
                 </div>
                 <nav class="footer-menu">
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="html/servicios.html">Servicios</a></li>
-                        <li><a href="html/nosotros.html">Nosotros</a></li>
-                        <li><a href="html/blog.html">Blog</a></li>
-                        <li><a href="html/contacto.html">Contacto</a></li>
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="servicios.html">Servicios</a></li>
+                        <li><a href="nosotros.html">Nosotros</a></li>
+                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="contacto.html">Contacto</a></li>
                     </ul>
                 </nav>
             </div>
