ajuste links de boostrap

--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -151,24 +151,26 @@
                     </section>
                     <!--Section 5-->
 
-                    <main>
+                    <<main>
                         <section class="contenedor-forms">
 
                             <body>
-                                <div class="h2">
-                                    <h2>HOLA ¡HABLEMOS!</h2>
-                                </div>
-                                <div class="form-register">
-                                    <input class="controls" type="text" name="nombres" id="nombres"
-                                        placeholder="Ingresa tu Nombre">
-                                    <input class="controls" type="text" name="telefono" id="telefonos"
-                                        placeholder="Ingresa tu Telefono">
-                                    <input class="controls" type="email" name="email" id="email"
-                                        placeholder="Ingresa tu Email">
-                                    <input class="controls" type="text" name="mensaje" id="mensaje"
-                                        placeholder="Ingresa tu Mensaje">
-                                    <input class="controls" type="submit" value="Enviar">
+                                <div class="wrapper">
+                                    <div class="h2">
+                                        <h2>HOLA ¡HABLEMOS!</h2>
+                                    </div>
+                                    <div class="form-register">
+                                        <input class="controls" type="text" name="nombres" id="nombres"
+                                            placeholder="Ingresa tu Nombre">
+                                        <input class="controls" type="text" name="telefono" id="telefonos"
+                                            placeholder="Ingresa tu Telefono">
+                                        <input class="controls" type="email" name="email" id="email"
+                                            placeholder="Ingresa tu Email">
+                                        <input class="controls" type="text" name="mensaje" id="mensaje"
+                                            placeholder="Ingresa tu Mensaje">
+                                        <input class="controls" type="submit" value="Enviar">
                         </section>
+                </div>
                 </div>
         </body>
         </main>
