--- a/html/servicios.html
+++ b/html/servicios.html
@@ -106,7 +106,7 @@
             <!--section cta-->
             <section class="cta-section">
                 <h2>Mejora tu Posicionamiento Web</h2>
-                <div><a href="https://wa.link/hktj46" class="cta-button">¡Hablemos!</a></div>
+                <div><a href="#" class="cta-button">¡Hablemos!</a></div>
                 <div class="grid-container">
                     <div class="grid-item">
                         <img src="../imgs/rendimiento.png" alt="rendimiento" class="service-image">
@@ -225,6 +225,7 @@
                 <section class="contenedor-forms">
 
                     <body>
+                        <div class="wrapper">
                         <div class="h2">
                             <h2>HOLA ¡HABLEMOS!</h2>
                         </div>
@@ -237,7 +238,8 @@
                             <input class="controls" type="text" name="mensaje" id="mensaje"
                                 placeholder="Ingresa tu Mensaje">
                             <input class="controls" type="submit" value="Enviar">
-                </section>
+                        </section>
+                    </div>
                 </div>
     </body>
     </main>
@@ -256,7 +258,7 @@
                 </div>
                 <nav class="footer-menu">
                     <ul>
-                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="servicios.html">Servicios</a></li>
                         <li><a href="nosotros.html">Nosotros</a></li>
                         <li><a href="blog.html">Blog</a></li>
