--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <header class="header">
         <div class="container">
             <div class="logo">
-                <img src="../imgs/amerellus-logo.png" alt="Amarellus SEO LAB" width="150px">
+                <img src="./imgs/amerellus-logo.png" alt="Amarellus SEO LAB" width="150px">
             </div>
             <div class="hamburger" id="hamburger">
                 <img src="imgs/hamburguesa.png" alt="menu hamburguesa">
@@ -178,7 +178,7 @@
                         </div>
                         <div class="carousel-item">
                             <div class="review-item">
-                                <img src="imgs/AdobeStock_858764108.jpeg" alt="cliente maria">
+                                <img src="./imgs/AdobeStock_858764108.jpeg" alt="cliente maria">
                                 <div>
                                     <p>"La agencia de SEO hizo un trabajo increíble. Muy recomendados."</p>
                                     <div class="stars">★★★★★</div>
@@ -188,7 +188,7 @@
                         </div>
                         <div class="carousel-item">
                             <div class="review-item">
-                                <img src="imgs/retrato-hombre-feliz-sonriente_23-2149022627.avif" alt="cliente carlos">
+                                <img src="./imgs/retrato-hombre-feliz-sonriente_23-2149022627.avif" alt="cliente carlos">
                                 <div>
                                     <p>"Gracias a ellos aumentamos nuestras visitas y ventas online. 100% satisfechos."
                                     </p>
@@ -199,7 +199,7 @@
                         </div>
                         <div class="carousel-item">
                             <div class="review-item">
-                                <img src="imgs/AdobeStock_788647812.jpeg" alt="cliente ana">
+                                <img src="./imgs/AdobeStock_788647812.jpeg" alt="cliente ana">
                                 <div>
                                     <p>"Profesionales y efectivos. Nuestros resultados han mejorado significativamente."
                                     </p>
@@ -210,7 +210,7 @@
                         </div>
                         <div class="carousel-item">
                             <div class="review-item">
-                                <img src="imgs/AdobeStock_758539085.jpeg" alt="cliente luis">
+                                <img src="./imgs/AdobeStock_758539085.jpeg" alt="cliente luis">
                                 <div>
                                     <p>"El equipo es muy atento y siempre está disponible para resolver dudas."</p>
                                     <div class="stars">★★★★★</div>
@@ -220,7 +220,7 @@
                         </div>
                         <div class="carousel-item">
                             <div class="review-item">
-                                <img src="imgs/retrato-mujer-mayor-blazer-profesional-al-aire-libre-portatil_23-2150296633.avif"
+                                <img src="./imgs/retrato-mujer-mayor-blazer-profesional-al-aire-libre-portatil_23-2150296633.avif"
                                     alt="laura cliente">
                                 <div>
                                     <p>"Excelente asesoramiento y resultados tangibles en poco tiempo."</p>
@@ -263,6 +263,7 @@
                 <section class="contenedor-forms">
 
                     <body>
+                        <div class="wrapper">
                         <div class="h2">
                             <h2>HOLA ¡HABLEMOS!</h2>
                         </div>
@@ -275,7 +276,8 @@
                             <input class="controls" type="text" name="mensaje" id="mensaje"
                                 placeholder="Ingresa tu Mensaje">
                             <input class="controls" type="submit" value="Enviar">
-                </section>
+                        </section>
+                    </div>
                 </div>
 </body>
 </main>
