--- a/html/blog.html
+++ b/html/blog.html
@@ -47,7 +47,7 @@
         <section class="blog">
             <div class="video-background">
                 <video autoplay muted loop>
-                    <source src="/Videos/19498-302627994_small.mp4" type="video/mp4">
+                    <source src="../Videos/19498-302627994_small.mp4" type="video/mp4">
                 </video>
             </div>
             <div class="contenido">
