--- a/html/contacto.html
+++ b/html/contacto.html
@@ -41,7 +41,7 @@
             <section class="contacto">
                 <div class="video-background">
                     <video autoplay muted loop>
-                        <source src="/Videos/AdobeStock_723188494 (1).mp4" type="video/mp4">
+                        <source src="../Videos/AdobeStock_723188494 (1).mp4" type="video/mp4">
                     </video>
                 </div>
                 <div class="contenido">
@@ -62,6 +62,7 @@
             <section class="contenedor-forms">
 
                 <body>
+                    <div class="wrapper">
                     <div class="h2">
                         <h2>HOLA ¡HABLEMOS!</h2>
                     </div>
@@ -74,7 +75,8 @@
                         <input class="controls" type="text" name="mensaje" id="mensaje"
                             placeholder="Ingresa tu Mensaje">
                         <input class="controls" type="submit" value="Enviar">
-            </section>
+                    </section>
+                </div>
             </div>
 
             <div class="banner">
