--- a/html/servicios.html
+++ b/html/servicios.html
@@ -226,20 +226,21 @@
 
                     <body>
                         <div class="wrapper">
-                        <div class="h2">
-                            <h2>HOLA ¡HABLEMOS!</h2>
-                        </div>
-                        <div class="form-register">
-                            <input class="controls" type="text" name="nombres" id="nombres"
-                                placeholder="Ingresa tu Nombre">
-                            <input class="controls" type="text" name="telefono" id="telefonos"
-                                placeholder="Ingresa tu Telefono">
-                            <input class="controls" type="email" name="email" id="email" placeholder="Ingresa tu Email">
-                            <input class="controls" type="text" name="mensaje" id="mensaje"
-                                placeholder="Ingresa tu Mensaje">
-                            <input class="controls" type="submit" value="Enviar">
-                        </section>
-                    </div>
+                            <div class="h2">
+                                <h2>HOLA ¡HABLEMOS!</h2>
+                            </div>
+                            <div class="form-register">
+                                <input class="controls" type="text" name="nombres" id="nombres"
+                                    placeholder="Ingresa tu Nombre">
+                                <input class="controls" type="text" name="telefono" id="telefonos"
+                                    placeholder="Ingresa tu Telefono">
+                                <input class="controls" type="email" name="email" id="email"
+                                    placeholder="Ingresa tu Email">
+                                <input class="controls" type="text" name="mensaje" id="mensaje"
+                                    placeholder="Ingresa tu Mensaje">
+                                <input class="controls" type="submit" value="Enviar">
+                </section>
+                </div>
                 </div>
     </body>
     </main>
@@ -276,7 +277,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
             integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
             crossorigin="anonymous"></script>
-    </section>
 </body>
 
 
